--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "intl": "^1.2.5",
     "react": "^16.4.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.4.1",
